Ensure there’s spacing for first block-link item

--- a/assets/stylesheets/components/_entity-list.scss
+++ b/assets/stylesheets/components/_entity-list.scss
@@ -27,7 +27,7 @@
 .c-entity-list--block-links {
   margin-top: -1px;
 
-  .c-entity-list__item + .c-entity-list__item {
+  .c-entity-list__item {
     border-top: 0;
     margin-top: $default-spacing-unit / 2;
   }
